--- a/dealer-add.html
+++ b/dealer-add.html
@@ -419,6 +419,11 @@
                   <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
                   <span class="lan-2">Inquiry</span></a>
                 </li>
+<li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="stock-list.html">
+                  <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Stock</span></a>
+                </li>
               
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
