--- a/index.html
+++ b/index.html
@@ -8,39 +8,40 @@
     <meta name="description" content="Riho admin is super flexible, powerful, clean &amp; modern responsive bootstrap 5 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, Riho admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
-    <link rel="icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
-    <link rel="shortcut icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
+    <link rel="icon" href="assets/images/logo/Unique_it.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo/Unique_it.jpg" type="image/x-icon">
     <title>Wholesaler</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./assets/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
+
     <!-- ico-font-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/icofont.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/icofont.css">
     <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/flag-icon.css">
     <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/flag-icon.css">
     <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/feather-icon.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/feather-icon.css">
     <!-- Font Awesome icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Plugins css start-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/slick.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/slick-theme.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/animate.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/echart.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/date-picker.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/slick.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/animate.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/echart.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/date-picker.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/bootstrap.css">
     <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link id="color" rel="stylesheet" href="./assets/css/color-1.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link id="color" rel="stylesheet" href="assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
   </head>
   <body> 
     <!-- loader starts-->
@@ -70,7 +71,7 @@
             </div>
           </form> 
           <div class="header-logo-wrapper col-auto p-0">  
-            <div class="logo-wrapper"> <a href="index.html"><img class="img-fluid for-light" src="./assets/images/logo/Unique_it.jpg" alt="logo-light"><img class="img-fluid for-dark" src="./assets/images/logo/Unique_it.jpg" alt="logo-dark"></a></div>
+            <div class="logo-wrapper"> <a href="index.html"><img class="img-fluid for-light" src="assets/images/logo/Unique_it.jpg" alt="logo-light"><img class="img-fluid for-dark" src="assets/images/logo/Unique_it.jpg" alt="logo-dark"></a></div>
             <div class="toggle-sidebar"> <i class="status_toggle middle sidebar-toggle" data-feather="align-center"></i></div>
           </div>
           <div class="left-header col-xxl-5 col-xl-6 col-lg-5 col-md-4 col-sm-3 p-0">
