--- a/inquiry-list.html
+++ b/inquiry-list.html
@@ -7,38 +7,38 @@
 <meta name="description" content="Riho admin is super flexible, powerful, clean &amp; modern responsive bootstrap 5 admin template with unlimited possibilities.">
 <meta name="keywords" content="admin template, Riho admin template, dashboard template, flat admin template, responsive admin template, web app">
 <meta name="author" content="pixelstrap">
-<link rel="icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
-<link rel="shortcut icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
+<link rel="icon" href="assets/images/logo/Unique_it.jpg" type="image/x-icon">
+<link rel="shortcut icon" href="assets/images/logo/Unique_it.jpg" type="image/x-icon">
 <title>Wholesaler</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./assets/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <!-- ico-font-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/icofont.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/icofont.css">
     <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/themify.css">
     <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/flag-icon.css">
     <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/feather-icon.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/feather-icon.css">
     <!-- Font Awesome icon -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Plugins css start-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/slick.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/slick-theme.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/animate.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/datatables.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/slick.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/animate.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/datatables.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors/bootstrap.css">
     <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link id="color" rel="stylesheet" href="./assets/css/color-1.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link id="color" rel="stylesheet" href="assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
 </head>
   <body> 
     <!-- loader starts-->
@@ -68,13 +68,13 @@
             </div>
           </form>
           <div class="header-logo-wrapper col-auto p-0">  
-            <div class="logo-wrapper"> <a href="index.html"><img class="img-fluid for-light" src="../assets/images/logo/logo_dark.png" alt="logo-light"><img class="img-fluid for-dark" src="../assets/images/logo/logo.png" alt="logo-dark"></a></div>
+            <div class="logo-wrapper"> <a href="index.html"><img class="img-fluid for-light" src="assets/images/logo/logo_dark.png" alt="logo-light"><img class="img-fluid for-dark" src="assets/images/logo/logo.png" alt="logo-dark"></a></div>
             <div class="toggle-sidebar"> <i class="status_toggle middle sidebar-toggle" data-feather="align-center"></i></div>
           </div>
           <div class="left-header col-xxl-5 col-xl-6 col-lg-5 col-md-4 col-sm-3 p-0">
             <div> <a class="toggle-sidebar" href="#"> <i class="iconly-Category icli"> </i></a>
               <div class="d-flex align-items-center gap-2 ">
-                <h4 class="f-w-600">Welcome Vipul Bhai</h4><img class="mt-0" src="../assets/images/hand.gif" alt="hand-gif">
+                <h4 class="f-w-600">Welcome Vipul Bhai</h4><img class="mt-0" src="assets/images/hand.gif" alt="hand-gif">
               </div>
             </div>
             <div class="welcome-content d-xl-block d-none"><span class="text-truncate col-12">Here’s what’s happening with your store today. </span></div>
@@ -85,7 +85,7 @@
                 <div class="form search-form mb-0">
                   <div class="input-group"><span class="input-icon">
                       <svg>
-                        <use href="../assets/svg/icon-sprite.svg#search-header"></use>
+                        <use href="assets/svg/icon-sprite.svg#search-header"></use>
                       </svg>
                       <input class="w-100" type="search" placeholder="Search"></span></div>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="form search-form mb-0">
                   <div class="input-group"> <span class="input-show"> 
                       <svg id="searchIcon">
-                        <use href="../assets/svg/icon-sprite.svg#search-header"></use>
+                        <use href="assets/svg/icon-sprite.svg#search-header"></use>
                       </svg>
                       <div id="searchInput">
                         <input type="search" placeholder="Search">
@@ -103,7 +103,7 @@
               </li>
               <li class="onhover-dropdown">
                 <svg>
-                  <use href="../assets/svg/icon-sprite.svg#star"></use>
+                  <use href="assets/svg/icon-sprite.svg#star"></use>
                 </svg>
                 <div class="onhover-show-div bookmark-flip">
                   <div class="flip-card">
@@ -153,7 +153,7 @@
               <li class="onhover-dropdown notification-down">
                 <div class="notification-box"> 
                   <svg> 
-                    <use href="../assets/svg/icon-sprite.svg#notification-header"></use>
+                    <use href="assets/svg/icon-sprite.svg#notification-header"></use>
                   </svg><span class="badge rounded-pill badge-secondary">4 </span>
                 </div>
                 <div class="onhover-show-div notification-dropdown"> 
@@ -179,7 +179,7 @@
                               <div class="cart-dropdown notification-all">
                                 <ul>
                                   <li class="pr-0 pl-0 pb-3 pt-3">
-                                    <div class="media"><img class="img-fluid b-r-5 me-3 img-60" src="../assets/images/other-images/receiver-img.jpg" alt="">
+                                    <div class="media"><img class="img-fluid b-r-5 me-3 img-60" src="assets/images/other-images/receiver-img.jpg" alt="">
                                       <div class="media-body"><a class="f-light f-w-500" href="product.html">Men Blue T-Shirt</a>
                                         <div class="qty-box"> 
                                           <div class="input-group"> <span class="input-group-prepend">
@@ -197,28 +197,28 @@
                               </div>
                               <ul> 
                                 <li>
-                                  <div class="user-alerts"><img class="user-image rounded-circle img-fluid me-2" src="../assets/images/dashboard/user/5.jpg" alt="user">
+                                  <div class="user-alerts"><img class="user-image rounded-circle img-fluid me-2" src="assets/images/dashboard/user/5.jpg" alt="user">
                                     <div class="user-name">
                                       <div> 
                                         <h6><a class="f-w-500 f-14" href="user-profile.html">Floyd Miles</a></h6><span class="f-light f-w-500 f-12">Sir, Can i remove part in des...</span>
                                       </div>
                                       <div> 
                                         <svg>
-                                          <use href="../assets/svg/icon-sprite.svg#more-vertical"></use>
+                                          <use href="assets/svg/icon-sprite.svg#more-vertical"></use>
                                         </svg>
                                       </div>
                                     </div>
                                   </div>
                                 </li>
                                 <li>
-                                  <div class="user-alerts"><img class="user-image rounded-circle img-fluid me-2" src="../assets/images/dashboard/user/6.jpg" alt="user">
+                                  <div class="user-alerts"><img class="user-image rounded-circle img-fluid me-2" src="assets/images/dashboard/user/6.jpg" alt="user">
                                     <div class="user-name">
                                       <div> 
                                         <h6><a class="f-w-500 f-14" href="user-profile.html">Dianne Russell</a></h6><span class="f-light f-w-500 f-12">So, what is my next work ?</span>
                                       </div>
                                       <div> 
                                         <svg>
-                                          <use href="../assets/svg/icon-sprite.svg#more-vertical"></use>
+                                          <use href="assets/svg/icon-sprite.svg#more-vertical"></use>
                                         </svg>
                                       </div>
                                     </div>
@@ -232,7 +232,7 @@
                               <ul> 
                                 <li class="notification d-flex w-100 justify-content-between align-items-center">
                                   <div class="d-flex w-100 notification-data justify-content-center align-items-center gap-2">
-                                    <div class="user-alerts flex-shrink-0"><img class="rounded-circle img-fluid img-40" src="../assets/images/dashboard/user/3.jpg" alt="user"></div>
+                                    <div class="user-alerts flex-shrink-0"><img class="rounded-circle img-fluid img-40" src="assets/images/dashboard/user/3.jpg" alt="user"></div>
                                     <div class="flex-grow-1">
                                       <div class="common-space user-id w-100">
                                         <div class="common-space w-100"> <a class="f-w-500 f-12" href="private-chat.html">Robert D. Hambly</a></div>
@@ -243,7 +243,7 @@
                                 </li>
                                 <li class="notification d-flex w-100 justify-content-between align-items-center">
                                   <div class="d-flex w-100 notification-data justify-content-center align-items-center gap-2">
-                                    <div class="user-alerts flex-shrink-0"><img class="rounded-circle img-fluid img-40" src="../assets/images/dashboard/user/7.jpg" alt="user"></div>
+                                    <div class="user-alerts flex-shrink-0"><img class="rounded-circle img-fluid img-40" src="assets/images/dashboard/user/7.jpg" alt="user"></div>
                                     <div class="flex-grow-1">
                                       <div class="common-space user-id w-100">
                                         <div class="common-space w-100"> <a class="f-w-500 f-12" href="private-chat.html">Courtney C. Strang</a></div>
@@ -254,7 +254,7 @@
                                 </li>
                                 <li class="notification d-flex w-100 justify-content-between align-items-center">
                                   <div class="d-flex w-100 notification-data justify-content-center align-items-center gap-2">
-                                    <div class="user-alerts flex-shrink-0"><img class="rounded-circle img-fluid img-40" src="../assets/images/dashboard/user/5.jpg" alt="user"></div>
+                                    <div class="user-alerts flex-shrink-0"><img class="rounded-circle img-fluid img-40" src="assets/images/dashboard/user/5.jpg" alt="user"></div>
                                     <div class="flex-grow-1">
                                       <div class="common-space user-id w-100">
                                         <div class="common-space w-100"> <a class="f-w-500 f-12" href="private-chat.html">Raye T. Sipes</a></div>
@@ -265,7 +265,7 @@
                                 </li>
                                 <li class="notification d-flex w-100 justify-content-between align-items-center">
                                   <div class="d-flex w-100 notification-data justify-content-center align-items-center gap-2">
-                                    <div class="user-alerts flex-shrink-0"><img class="rounded-circle img-fluid img-40" src="../assets/images/dashboard/user/6.jpg" alt="user"></div>
+                                    <div class="user-alerts flex-shrink-0"><img class="rounded-circle img-fluid img-40" src="assets/images/dashboard/user/6.jpg" alt="user"></div>
                                     <div class="flex-grow-1">
                                       <div class="common-space user-id w-100">
                                         <div class="common-space w-100"> <a class="f-w-500 f-12" href="private-chat.html">Henry S. Miller</a></div>
@@ -281,7 +281,7 @@
                             <div class="cart-dropdown mt-4"> 
                               <ul>
                                 <li class="pr-0 pl-0 pb-3">
-                                  <div class="media"><img class="img-fluid b-r-5 me-3 img-60" src="../assets/images/other-images/cart-img.jpg" alt="">
+                                  <div class="media"><img class="img-fluid b-r-5 me-3 img-60" src="assets/images/other-images/cart-img.jpg" alt="">
                                     <div class="media-body"><a class="f-light f-w-500" href="product.html">Furniture Chair for Home</a>
                                       <div class="qty-box">
                                         <div class="input-group"> <span class="input-group-prepend">
@@ -296,7 +296,7 @@
                                   </div>
                                 </li>
                                 <li class="pr-0 pl-0 pb-3 pt-3">
-                                  <div class="media"><img class="img-fluid b-r-5 me-3 img-60" src="../assets/images/other-images/receiver-img.jpg" alt="">
+                                  <div class="media"><img class="img-fluid b-r-5 me-3 img-60" src="assets/images/other-images/receiver-img.jpg" alt="">
                                     <div class="media-body"><a class="f-light f-w-500" href="product.html">Men Cotton Blend Blue T-Shirt</a>
                                       <div class="qty-box"> 
                                         <div class="input-group"> <span class="input-group-prepend">
@@ -327,7 +327,7 @@
                 </div>
               </li>
               <li class="profile-nav onhover-dropdown"> 
-                <div class="media profile-media"><img class="b-r-10" src="../assets/images/dashboard/profile.png" alt="">
+                <div class="media profile-media"><img class="b-r-10" src="assets/images/dashboard/profile.png" alt="">
                   <div class="media-body d-xxl-block d-none box-col-none">
                     <div class="d-flex align-items-center gap-2"> <span>Vipul Bhai </span><i class="middle fa fa-angle-down"> </i></div>
                     <p class="mb-0 font-roboto">Admin</p>
@@ -441,7 +441,7 @@
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">                                       
                         <svg class="stroke-icon">
-                          <use href="../assets/svg/icon-sprite.svg#stroke-home"></use>
+                          <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
                         </svg></a></li>
                     <li class="breadcrumb-item active">Inquiry List</li>
                   </ol>
@@ -562,29 +562,29 @@
       </div>
     </div>
     <!-- latest jquery-->
-    <script src="../assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
     <!-- Bootstrap js-->
-    <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- feather icon js-->
-    <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
-    <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+    <script src="assets/js/icons/feather-icon/feather.min.js"></script>
+    <script src="assets/js/icons/feather-icon/feather-icon.js"></script>
     <!-- scrollbar js-->
-    <script src="../assets/js/scrollbar/simplebar.js"></script>
-    <script src="../assets/js/scrollbar/custom.js"></script>
+    <script src="assets/js/scrollbar/simplebar.js"></script>
+    <script src="assets/js/scrollbar/custom.js"></script>
     <!-- Sidebar jquery-->
-    <script src="../assets/js/config.js"></script>
+    <script src="assets/js/config.js"></script>
     <!-- Plugins JS start-->
-    <script src="../assets/js/sidebar-menu.js"></script>
-    <script src="../assets/js/sidebar-pin.js"></script>
-    <script src="../assets/js/slick/slick.min.js"></script>
-    <script src="../assets/js/slick/slick.js"></script>
-    <script src="../assets/js/header-slick.js"></script>
+    <script src="assets/js/sidebar-menu.js"></script>
+    <script src="assets/js/sidebar-pin.js"></script>
+    <script src="assets/js/slick/slick.min.js"></script>
+    <script src="assets/js/slick/slick.js"></script>
+    <script src="assets/js/header-slick.js"></script>
     <!-- calendar js-->
-    <script src="../assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
-    <script src="../assets/js/datatable/datatables/datatable.custom.js"></script>
+    <script src="assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
+    <script src="assets/js/datatable/datatables/datatable.custom.js"></script>
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
-    <script src="../assets/js/script.js"></script>
-    <script src="./assets/js/filter.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/filter.js"></script>
   </body>
 </html>
